tests/baselines/reference/ES5For-ofTypeCheck9(target=es2015).errors.txt
ES5For-ofTypeCheck9.ts(2,15): error TS2488: Type 'string | number | symbol | string[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== ES5For-ofTypeCheck9.ts (1 errors) ====
    declare var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2488: Type 'string | number | symbol | string[]' must have a '[Symbol.iterator]()' method that returns an iterator.